--- a/backend/package.json
+++ b/backend/package.json
@@ -10,10 +10,12 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "bootstrap": "^5.2.3",
     "express": "^4.18.2",
     "express-validator": "^6.15.0",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^6.10.0"
+    "mongoose": "^6.10.0",
+    "react-bootstrap": "^2.7.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.21"
